Project showcase section has been added. Working on responsive behavior.

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a3d7fee849.js" crossorigin="anonymous"></script>
   <title>Personal Portfolio</title>
   </head>
   <body>
@@ -23,16 +24,113 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto pr-4" id="nav-items">
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Background</a>
+          <a class="nav-link" href="#background">Background</a>
         </li>
       </ul>
     </div>
   </nav>
-<hr/>
+<hr class="mb-0"/>
 <!-- End Nav Bar -->
+<div class="main-intro">
+  <div class="container-fluid text-center">
+    <div class="row">
+      <div class="col-lg-12">
+          <div class="site-intro">
+            <h1 class="font-weight-bold">Kris Brinton</h1>
+            <h3 class="font-weight-lighter">Full Stack Developer</h3>
+            <hr class="divider">
+            <div class="sm-list">
+              <div class="social-media">
+                <a href="https://www.linkedin.com/in/kris-brinton-320187b2" class="btn btn-light btn-large" role="button" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                  <span clas="linkedin">LinkedIn</span>
+                </a>
+              </div>
+              <div class="social-media-gh">
+                <a href="https://github.com/Kbrinton3092" class="btn btn-light btn-large" role="button" target="_blank">
+                  <i class="fab fa-github"></i>
+                  <span clas="github">Github</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- End Intro Section -->
+<div class="container project-container">
+    <div class="row">
+      <div class="col-12" id="projects">
+        <p class="text-center pt-2 font-weight-light project"
+        style="font-size: 30px;">
+          Projects.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-sm-6">
+        <a href="#">
+          <img class="img-fluid rounded" src="./images/p-one.jpg"/>
+        </a>
+        <p class="project-description text-center pt-2">
+          <span class="project-name"><em>The Watch Store</em></span>
+          <br>
+          <span class="project-d">A website for a luxury watch boutique that allows
+            watch collectors to buy and trade their vintage watches.</span>
+        </p>
+        <div class="d-flex">
+        <span class="text-muted"><small>HTML | CSS | Javascript</small></span>
+        <br>
+        <span class="text-muted ml-auto"><small>Published | 2019</small></span>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 project-two">
+        <a href="#">
+          <img class="img-fluid rounded" src="./images/project-img.jpg"/>
+        </a>
+        <p class="project-description text-center pt-2">
+          <span class="project-name"><em>Bob's Photography</em></span>
+          <br>
+          <span class="project-d">A page dedicated to photojournalism. Scroll through
+          an amazing collection of photos from around the world.</span>
+          <br>
+        </p>
+          <div class="d-flex">
+          <span class="text-muted"><small>HTML | CSS | Javascript</small></span>
+          <br>
+          <span class="text-muted ml-auto"><small>Published | 2019</small></span>
+          </div>
+      </div>
+    </div>
+</div>
+<!-- End Project Section -->
+<div class="container about-me-section" id="background">
+    <div class="row">
+      <div class="col-12" id="about-me">
+        <p class="text-center pt-2 font-weight-light project"
+        style="font-size: 30px;">
+          My Background.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 col-sm-5">
+        <img src="./images/kb-headshot.jpg">
+      </div>
+      <div class="col-8 col-sm-7">
+        <span>I come from a finance background, having little exposure to the world
+        of development, I relied heavily on the guidance of Altcademy to help
+        teach the skills neccessary to kickstart my coding journey. Upon graduating
+        from the University of South Florida, I went to work in medical device sales where
+        I stayed for two-years. </span>
+      </div>
+  </div>
+</div>
+
 
 
 
