Draft page is done pushing to github

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
   <script src="https://kit.fontawesome.com/a3d7fee849.js" crossorigin="anonymous"></script>
   <title>Personal Portfolio</title>
   </head>
-  <body data-spy="scroll" data-target="main-nav">
-  <nav class="navbar navbar-expand-lg navbar-light pt-2 pb-0 position-fixed-top
+  <body>
+  <nav class="navbar navbar-expand-lg navbar-light pt-2 pb-0
   w-100 bg-white" id="main-nav">
-    <a class="navbar-brand ml-3" href="#" id="brand">Kris Brinton</a>
+    <span class="navbar-brand ml-3" id="brand">Kris Brinton</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -131,13 +131,15 @@
         teach the skills neccessary to kickstart my coding journey. Upon graduating
         from the University of South Florida, I went to work in medical device sales where
         I stayed for two-years. I then found myself in the wonderful world of mortgage lending
-        where I became a top producing loan officer, producing $1.5 million in sales per month.
+        where I became a top producing loan officer, producing $1.5 million in sales per month.<br>
         <br>
         I was born in Russia and moved to sunny Tampa, FL shortly after. Growing up
         in Florida exposed me to the wonders of nature and outdoor activities. That
         being said, I spend most of my free time running outside, playing soccer,
         and lounging on the beach. I am eager to grow my development skills and
-        am ready to learn as much as possible!
+        am ready to learn as much as possible!<br>
+        <br>
+        Kris Brinton | (813)390-0000 | Myemail@gmail.com
         </span>
       </div>
   </div>
@@ -180,16 +182,20 @@
   </div>
 </div>
 <!-- Footer Section -->
-
-
-
-
-
-
-
-
-    <footer>
-      </footer>
+    <footer style="height: 40px;">
+      <div class="container-fluid footer-section">
+        <div class="row">
+          <div class="col-12">
+            <div class="social-icons text-right">
+            <a href="https://www.instagram.com/close.loans.with.kris/?hl=en" target="_blank">
+              <i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/friends/requests/?profile_id=100065111384675&notif_id=1628506717343740&notif_t=friend&ref=notif" target="_blank">
+              <i class="fab fa-facebook-f"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
       <!-- JS Code -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
